--- a/server/package.json
+++ b/server/package.json
@@ -11,5 +11,8 @@
   "license": "ISC",
   "devDependencies": {
     "express": "^4.18.2"
+  },
+  "dependencies": {
+    "body-parser": "^1.20.2"
   }
 }
