--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,8 @@
     "express": "^4.18.2"
   },
   "dependencies": {
-    "body-parser": "^1.20.2"
+    "body-parser": "^1.20.2",
+    "express-handlebars": "^6.0.7",
+    "socket.io": "^4.7.2"
   }
 }
